# TubeSiphon

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: SPEC.md
tests/: __init__.py  conftest.py  test_cli_db.py  test_ingest_channel.py  test_ingest_parser.py  test_ingest_subtitle.py  test_live_channel_fixture.py  test_live_pipeline.py  test_project_scaffold.py  test_static_guards.py  test_storage_db.py  test_youtube_test_data_policy.py
tests/fixtures/: nicolasyounglive_videos.json
tubesiphon/: __init__.py  paths.py
tubesiphon/cli/: __init__.py  main.py
tubesiphon/config/: __init__.py
tubesiphon/ingest/: __init__.py  channel.py  parser.py  subtitle.py
tubesiphon/output/: __init__.py  files.py
tubesiphon/process/: __init__.py
tubesiphon/storage/: __init__.py  db.py  schema.sql
