[project]
name = "tubesiphon"
version = "0.1.0"
description = "Python CLI pipeline skeleton for ingesting YouTube subtitles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pgvector>=0.4.2",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "sentence-transformers>=5.4.1",
    "tqdm>=4.67.3",
    "yt-dlp>=2026.3.17",
]

[project.scripts]
tube-siphon = "tubesiphon.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
